apps/portfolio/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - youngwon.me
      secretName: youngwon-me-tls
  rules:
    - host: youngwon.me
      http:
        paths:
          - path: /portfolio
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
